test/org/midica/testfiles/failing/call-param-named-more-assigners-2.midica
INSTRUMENTS
	0    PERCUSSIVE_ORGAN       PERCUSSIVE_ORGAN
END

CALL f(vel==102)

FUNCTION f
	0  c  /4  v=${vel}
END
